--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
+    "promise-retry": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.5",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/promise-retry": "^1.1.3",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
